tests/golden/compile-pass/control_if_tail_return.rua
fn maximum(a: i64, b: i64) -> i64 {
    if a > b { a } else { b }
}
