tests/golden/compile-fail/enum_unknown_variant.rua
enum State { Ready }

fn state() -> State {
    State::Missing
}
